introduce the side bar menu

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,6 +35,12 @@
   "reset": "Reset",
   "goldWeight": "Gold Weight (grams)",
   "goldPurity": "Gold Purity (%)",
+  "selectAmountPurity": "Select Gold Purity",
+  "selectRateType": "Select Rate Type",
+  "rate22k": "22K Gold Rate",
+  "rate24k": "24K Gold Rate (Pure Gold)",
+  "rateHelper": "Enter {{type}} gold rate per gram",
+  "selectMiscType": "Select Miscellaneous Type",
   "goldRate": "Gold Rate (per gram)",
   "miscAmount": "Miscellaneous Amount",
   "miscPercentage": "Miscellaneous Percentage (%)",
