--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -35,6 +35,12 @@
   "reset": "மீட்டமை",
   "goldWeight": "தங்க எடை (கிராம்)",
   "goldPurity": "தங்க தூய்மை (%)",
+  "selectAmountPurity": "தங்க தூய்மையை தேர்ந்தெடுக்கவும்",
+  "selectRateType": "விலை வகையை தேர்ந்தெடுக்கவும்",
+  "rate22k": "22K தங்க விலை",
+  "rate24k": "24K தங்க விலை (தூய தங்கம்)",
+  "rateHelper": "{{type}} தங்க விலையை ஒரு கிராமுக்கு உள்ளிடவும்",
+  "selectMiscType": "இதர வகையை தேர்ந்தெடுக்கவும்",
   "goldRate": "தங்க விலை (ஒரு கிராமுக்கு)",
   "miscAmount": "இதர தொகை",
   "miscPercentage": "இதர சதவிகிதம் (%)",
