--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -55,5 +55,20 @@
   "miscellaneousAmount": "இதர தொகை: ₹<span style='font-weight: bold; color: #1565C0;'>{{amount}}</span>",
   "netAmount": "நிகர தொகை: ₹<span style='font-weight: bold; color: #1565C0;'>{{amount}}</span>",
   "pureGoldWeight": "தூய தங்க எடை: <span style='font-weight: bold; color: #1565C0;'>{{weight}}</span> கிராம்",
-  "calculatorType": "கணக்கீட்டாளர் வகை"
+  "calculatorType": "கணக்கீட்டாளர் வகை",
+  "goldUtilityCalculator": "தங்க உபயோக கணக்கீட்டாளர்",
+  "menu": "பட்டியல்",
+  "welcomeMessage": "தங்க உபயோக கணக்கீட்டாளருக்கு வரவேற்பு",
+  "selectCalculatorMessage": "தொடங்க, தயவுசெய்து பட்டியலில் இருந்து ஒரு கணக்கீட்டாளரை தேர்ந்தெடுக்கவும்",
+  "enter22kGoldRate": "22K தங்க விலை உள்ளிடவும் (ஒரு கிராமுக்கு)",
+  "enter24kGoldRate": "24K தங்க விலை உள்ளிடவும் (ஒரு கிராமுக்கு)",
+  "use22kRate": "<span style='font-weight: bold; color: #D4AF37;'>{{type}}</span> விலையை பயன்படுத்து",
+  "use24kRate": "<span style='font-weight: bold; color: #D4AF37;'>{{type}}</span> விலையை பயன்படுத்து",
+  "miscCharges": "இதர கட்டணங்கள்",
+  "totalAmountResult": "மொத்த தொகை: ₹<span style='font-weight: bold; color: #1565C0;'>{{amount}}</span>",
+  "breakdown": "விபரங்கள்",
+  "goldValue": "தங்க மதிப்பு: ₹<span style='font-weight: bold; color: #1565C0;'>{{value}}</span>",
+  "miscChargesValue": "இதர கட்டணங்கள்: ₹<span style='font-weight: bold; color: #1565C0;'>{{value}}</span>",
+  "goldPurityUsed": "தங்க தூய்மை: <span style='font-weight: bold; color: #1565C0;'>{{purity}}%</span>",
+  "rateUsed": "பயன்படுத்திய விலை ({{type}}): ₹<span style='font-weight: bold; color: #1565C0;'>{{rate}}</span>"
 }
