--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -70,5 +70,7 @@
   "goldValue": "தங்க மதிப்பு: ₹<span style='font-weight: bold; color: #1565C0;'>{{value}}</span>",
   "miscChargesValue": "இதர கட்டணங்கள்: ₹<span style='font-weight: bold; color: #1565C0;'>{{value}}</span>",
   "goldPurityUsed": "தங்க தூய்மை: <span style='font-weight: bold; color: #1565C0;'>{{purity}}%</span>",
-  "rateUsed": "பயன்படுத்திய விலை ({{type}}): ₹<span style='font-weight: bold; color: #1565C0;'>{{rate}}</span>"
+  "rateUsed": "பயன்படுத்திய விலை ({{type}}): ₹<span style='font-weight: bold; color: #1565C0;'>{{rate}}</span>",
+  "calculationNote": "குறிப்பு: தொகை தூய தங்க உள்ளடக்கம் (எடை × தூய்மை%) அடிப்படையில் 24K விலையைப் பயன்படுத்தி கணக்கிடப்படுகிறது.",
+  "pureGoldWeightUsed": "தூய தங்க எடை: <span style='font-weight: bold; color: #1565C0;'>{{weight}}</span> கிராம்"
 }
