introduce support for 22k , 24k rates

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -42,8 +42,8 @@
   "rateHelper": "Enter {{type}} gold rate per gram",
   "selectMiscType": "Select Miscellaneous Type",
   "goldRate": "Gold Rate (per gram)",
-  "miscAmount": "Miscellaneous Amount",
-  "miscPercentage": "Miscellaneous Percentage (%)",
+  "miscAmount": "Miscellaneous Amount (₹)",
+  "miscPercentage": "Miscellaneous Percentage (% - max 1000%)",
   "miscAmountHelper": "Additional fixed amount (charges, etc.)",
   "miscPercentageHelper": "Additional percentage of gold worth",
   "miscType": "Miscellaneous Type",
@@ -60,8 +60,8 @@
   "menu": "Menu",
   "welcomeMessage": "Welcome to Gold Utility Calculator",
   "selectCalculatorMessage": "Please select a calculator from the menu to get started",
-  "enter22kGoldRate": "Enter 22K Gold Rate (per gram)",
-  "enter24kGoldRate": "Enter 24K Gold Rate (per gram)",
+  "enter22kGoldRate": "Enter 22K Gold Rate per gram (₹)",
+  "enter24kGoldRate": "Enter 24K Gold Rate per gram (₹)",
   "use22kRate": "Use <span style='font-weight: bold; color: #D4AF37;'>{{type}}</span> rate",
   "use24kRate": "Use <span style='font-weight: bold; color: #D4AF37;'>{{type}}</span> rate",
   "miscCharges": "Miscellaneous Charges",
