--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -42,8 +42,8 @@
   "rateHelper": "{{type}} தங்க விலையை ஒரு கிராமுக்கு உள்ளிடவும்",
   "selectMiscType": "இதர வகையை தேர்ந்தெடுக்கவும்",
   "goldRate": "தங்க விலை (ஒரு கிராமுக்கு)",
-  "miscAmount": "இதர தொகை",
-  "miscPercentage": "இதர சதவிகிதம் (%)",
+  "miscAmount": "இதர தொகை (₹)",
+  "miscPercentage": "இதர சதவிகிதம் (% - அதிகபட்சம் 1000%)",
   "miscAmountHelper": "கூடுதல் நிர்ணயித்த தொகை (கட்டணம், முதலியன)",
   "miscPercentageHelper": "தங்க மதிப்பின் கூடுதல் சதவிகிதம்",
   "miscType": "இதர வகை",
@@ -61,7 +61,7 @@
   "welcomeMessage": "தங்க உபயோக கணக்கீட்டாளருக்கு வரவேற்பு",
   "selectCalculatorMessage": "தொடங்க, தயவுசெய்து பட்டியலில் இருந்து ஒரு கணக்கீட்டாளரை தேர்ந்தெடுக்கவும்",
   "enter22kGoldRate": "22K தங்க விலை உள்ளிடவும் (ஒரு கிராமுக்கு)",
-  "enter24kGoldRate": "24K தங்க விலை உள்ளிடவும் (ஒரு கிராமுக்கு)",
+  "enter24kGoldRate": "24K தங்க விலை உள்ளிடவும் ஒரு கிராமுக்கு (₹)",
   "use22kRate": "<span style='font-weight: bold; color: #D4AF37;'>{{type}}</span> விலையை பயன்படுத்து",
   "use24kRate": "<span style='font-weight: bold; color: #D4AF37;'>{{type}}</span> விலையை பயன்படுத்து",
   "miscCharges": "இதர கட்டணங்கள்",
