update calculation for Purity calculator

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,7 +28,14 @@
   "tamil": "தமிழ்",
   "toDecreasePurity": "To decrease purity from {{current}}% to {{target}}%",
   "toIncreasePurity": "To increase purity from {{current}}% to {{target}}%",
+  "toReachNearPerfectPurity": "To reach near-perfect purity from {{current}}% to {{target}}% (practical limit)",
   "finalResults": "Final Results:",
+  "impossibleCalculation": "Calculation Not Possible",
+  "cannotReach100Percent": "Cannot reach 100% purity by adding {{purity}}% gold. Only 100% pure gold can achieve this.",
+  "cannotIncreaseWithLowerPurity": "Cannot increase purity to {{targetPurity}}% by adding {{goldPurity}}% gold. The gold to add must be purer than the target.",
+  "calculationNotPossible": "This calculation is not mathematically possible with the given parameters.",
+  "refiningTo100Percent": "To achieve 100% purity, refining is required to remove <span style='font-weight: bold; color: #C87533;'>{{weight}}</span> grams of impurities.",
+  "resultAfterRefining": "After refining to 100% purity, you will have <span style='font-weight: bold; color: #D4AF37;'>{{weight}}</span> grams of pure gold.",
   "pureGoldContent": "Pure gold content: <span style='font-weight: bold; color: #1565C0;'>{{weight}}</span> grams",
   "copperContent": "Copper content: <span style='font-weight: bold; color: #1565C0;'>{{weight}}</span> grams",
   "enterAllValues": "Enter all values to see results",
