--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -28,7 +28,14 @@
   "tamil": "தமிழ்",
   "toDecreasePurity": "தூய்மையை {{current}}% இலிருந்து {{target}}% ஆக குறைக்க",
   "toIncreasePurity": "தூய்மையை {{current}}% இலிருந்து {{target}}% ஆக அதிகரிக்க",
+  "toReachNearPerfectPurity": "{{current}}% இலிருந்து {{target}}% (நடைமுறை வரம்பு) ஆக கிட்டத்தட்ட முழுமையான தூய்மையை அடைய",
   "finalResults": "இறுதி முடிவுகள்:",
+  "impossibleCalculation": "கணக்கீடு சாத்தியமில்லை",
+  "cannotReach100Percent": "{{purity}}% தங்கம் சேர்ப்பதன் மூலம் 100% தூய்மையை அடைய முடியாது. 100% தூய தங்கம் மட்டுமே இதை அடைய முடியும்.",
+  "cannotIncreaseWithLowerPurity": "{{goldPurity}}% தங்கம் சேர்ப்பதன் மூலம் {{targetPurity}}% தூய்மையை அடைய முடியாது. சேர்க்கும் தங்கம் இலக்கை விட தூய்மையாக இருக்க வேண்டும்.",
+  "calculationNotPossible": "கொடுக்கப்பட்ட அளவுருக்களுடன் இந்த கணக்கீடு கணித ரீதியாக சாத்தியமில்லை.",
+  "refiningTo100Percent": "100% தூய்மையை அடைய, <span style='font-weight: bold; color: #C87533;'>{{weight}}</span> கிராம் அசுத்தங்களை அகற்ற சுத்திகரிப்பு தேவை.",
+  "resultAfterRefining": "100% தூய்மைக்கு சுத்திகரித்த பிறகு, உங்களிடம் <span style='font-weight: bold; color: #D4AF37;'>{{weight}}</span> கிராம் தூய தங்கம் இருக்கும்.",
   "pureGoldContent": "தூய தங்க உள்ளடக்கம்: <span style='font-weight: bold; color: #1565C0;'>{{weight}}</span> கிராம்",
   "copperContent": "செம்பு உள்ளடக்கம்: <span style='font-weight: bold; color: #1565C0;'>{{weight}}</span> கிராம்",
   "enterAllValues": "முடிவுகளைக் காண அனைத்து மதிப்புகளையும் உள்ளிடவும்",
