introduce Interest calculator

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -81,5 +81,26 @@
   "rateUsed": "Rate Used ({{type}}): ₹<span style='font-weight: bold; color: #1565C0;'>{{rate}}</span>",
   "calculationNote": "Note: Amount is calculated based on pure gold content (weight × purity%) using 24K rate.",
   "pureGoldWeightUsed": "Pure Gold Weight: <span style='font-weight: bold; color: #1565C0;'>{{weight}}</span> grams",
-  "amountInWords": "Amount in Words"
+  "amountInWords": "Amount in Words",
+  "interestCalculator": "Interest Calculator",
+  "principalAmount": "Principal Amount (₹)",
+  "startDate": "Start Date",
+  "endDate": "End Date",
+  "interestRate": "Interest Rate (%)",
+  "interestRatePeriod": "Interest Rate Period",
+  "perYear": "Per Year",
+  "perMonth": "Per Month",
+  "endDateMustBeGreater": "End date cannot be earlier than start date",
+  "timePeriod": "Time Period",
+  "years": "years",
+  "months": "months",
+  "days": "days",
+  "interestAmount": "Interest Amount",
+  "totalAmount": "Total Amount",
+  "calculationFormula": "Calculation Formula",
+  "simpleInterestFormula": "Simple Interest = (Principal × Rate × Time) ÷ 100",
+  "where": "Where:",
+  "principal": "Principal",
+  "rate": "Rate",
+  "time": "Time"
 }
