--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -81,5 +81,26 @@
   "rateUsed": "பயன்படுத்திய விலை ({{type}}): ₹<span style='font-weight: bold; color: #1565C0;'>{{rate}}</span>",
   "calculationNote": "குறிப்பு: தொகை தூய தங்க உள்ளடக்கம் (எடை × தூய்மை%) அடிப்படையில் 24K விலையைப் பயன்படுத்தி கணக்கிடப்படுகிறது.",
   "pureGoldWeightUsed": "தூய தங்க எடை: <span style='font-weight: bold; color: #1565C0;'>{{weight}}</span> கிராம்",
-  "amountInWords": "வார்த்தைகளில் தொகை"
+  "amountInWords": "வார்த்தைகளில் தொகை",
+  "interestCalculator": "வட்டி கணக்கீட்டாளர்",
+  "principalAmount": "அசல் தொகை (₹)",
+  "startDate": "தொடக்க தேதி",
+  "endDate": "முடிவு தேதி", 
+  "interestRate": "வட்டி விகிதம் (%)",
+  "interestRatePeriod": "வட்டி விகித காலம்",
+  "perYear": "ஆண்டுக்கு",
+  "perMonth": "மாதத்திற்கு",
+  "endDateMustBeGreater": "முடிவு தேதி தொடக்க தேதியை விட முந்தியதாக இருக்க முடியாது",
+  "timePeriod": "கால அளவு",
+  "years": "ஆண்டுகள்",
+  "months": "மாதங்கள்",
+  "days": "நாட்கள்",
+  "interestAmount": "வட்டி தொகை",
+  "totalAmount": "மொத்த தொகை",
+  "calculationFormula": "கணக்கீட்டு சூத்திரம்",
+  "simpleInterestFormula": "எளிய வட்டி = (அசல் × விகிதம் × நேரம்) ÷ 100",
+  "where": "எங்கே:",
+  "principal": "அசல்",
+  "rate": "விகிதம்",
+  "time": "நேரம்"
 }
