--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -102,5 +102,14 @@
   "where": "எங்கே:",
   "principal": "அசல்",
   "rate": "விகிதம்",
-  "time": "நேரம்"
+  "time": "நேரம்",
+  "interestType": "வட்டி வகை",
+  "simpleInterest": "எளிய வட்டி",
+  "compoundInterest": "கூட்டு வட்டி",
+  "timePeriodRounding": "கால அளவு வட்டமிடல்",
+  "noExactCalculation": "இல்லை (துல்லியமான கணக்கீடு)",
+  "yesRoundDaysToMonths": "ஆம் (நாட்களை மாதங்களாக வட்டமிடல்)",
+  "roundingEnabled": "வட்டமிடல் இயக்கப்பட்டது: நாட்கள் ≥15 1 மாதமாக வட்டமிடப்படும், நாட்கள் <15 0.5 மாதமாக கணக்கிடப்படும்",
+  "exactCalculation": "துல்லியமான கணக்கீடு: அனைத்து நாட்களும் துல்லியமாக கணக்கிடப்படும்",
+  "countedAsHalfMonth": "0.5 மாதமாக கணக்கிடப்பட்டது"
 }
