Date picker user input friendly

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -41,6 +41,7 @@
   "enterAllValues": "Enter all values to see results",
   "reset": "Reset",
   "goldWeight": "Gold Weight (grams)",
+  "evaluationDate": "Evaluation Date",
   "goldPurity": "Gold Purity (%)",
   "selectAmountPurity": "Select Gold Purity",
   "selectRateType": "Select Rate Type",
