--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -41,6 +41,7 @@
   "enterAllValues": "முடிவுகளைக் காண அனைத்து மதிப்புகளையும் உள்ளிடவும்",
   "reset": "மீட்டமை",
   "goldWeight": "தங்க எடை (கிராம்)",
+  "evaluationDate": "மதிப்பீட்டு தேதி",
   "goldPurity": "தங்க தூய்மை (%)",
   "selectAmountPurity": "தங்க தூய்மையை தேர்ந்தெடுக்கவும்",
   "selectRateType": "விலை வகையை தேர்ந்தெடுக்கவும்",
