--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -112,5 +112,13 @@
   "yesRoundDaysToMonths": "ஆம் (நாட்களை மாதங்களாக வட்டமிடல்)",
   "roundingEnabled": "வட்டமிடல் இயக்கப்பட்டது: நாட்கள் ≥15 1 மாதமாக வட்டமிடப்படும், நாட்கள் <15 0.5 மாதமாக கணக்கிடப்படும்",
   "exactCalculation": "துல்லியமான கணக்கீடு: அனைத்து நாட்களும் துல்லியமாக கணக்கிடப்படும்",
-  "countedAsHalfMonth": "0.5 மாதமாக கணக்கிடப்பட்டது"
+  "countedAsHalfMonth": "0.5 மாதமாக கணக்கிடப்பட்டது",
+  "exportToPng": "PNG ஆக ஏற்றுமதி",
+  "exportToPdf": "PDF ஆக ஏற்றுமதி",
+  "exportTooltip": "முடிவுகளை ஏற்றுமதி",
+  "exportingPng": "PNG ஆக ஏற்றுமதி செய்யப்படுகிறது...",
+  "exportingPdf": "PDF ஆக ஏற்றுமதி செய்யப்படுகிறது...",
+  "exportSuccess": "ஏற்றுமதி வெற்றிகரமாக முடிந்தது!",
+  "exportError": "ஏற்றுமதியின் போது பிழை ஏற்பட்டது",
+  "noDataToExport": "ஏற்றுமதி செய்ய தரவு இல்லை. முதலில் கணக்கீட்டை முடிக்கவும்."
 }
