--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -120,5 +120,9 @@
   "exportingPdf": "PDF ஆக ஏற்றுமதி செய்யப்படுகிறது...",
   "exportSuccess": "ஏற்றுமதி வெற்றிகரமாக முடிந்தது!",
   "exportError": "ஏற்றுமதியின் போது பிழை ஏற்பட்டது",
-  "noDataToExport": "ஏற்றுமதி செய்ய தரவு இல்லை. முதலில் கணக்கீட்டை முடிக்கவும்."
+  "noDataToExport": "ஏற்றுமதி செய்ய தரவு இல்லை. முதலில் கணக்கீட்டை முடிக்கவும்.",
+  "purityExportToPng": "தூய்மை முடிவுகளை PNG ஆக ஏற்றுமதி",
+  "purityExportToPdf": "தூய்மை முடிவுகளை PDF ஆக ஏற்றுமதி",
+  "amountExportToPng": "தொகை முடிவுகளை PNG ஆக ஏற்றுமதி",
+  "amountExportToPdf": "தொகை முடிவுகளை PDF ஆக ஏற்றுமதி"
 }
